--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -13,6 +13,7 @@
 
     <div class="main-content">
         {{>header}}
+        <p>The data here is used by the api mapbox.com and the weatherstack.com</p>
         <img src="/img/krishna.jpeg" alt="">
     </div>
    
