--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -16,6 +16,7 @@
             <input type="text" placeholder="Type address">
             <button>Search</button>
         </form>
+        <p>To Get you location's forecast Click here <button id="get-location">Weather</button></p>
 
         <p id ="message-1"></p>
         <p id ="message-2"></p>
